added codes to expose all endpoints for test using concurrent storage

--- a/QuantumVault/QuantumVault.Api/QuantumVault.Api.csproj
+++ b/QuantumVault/QuantumVault.Api/QuantumVault.Api.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QuantumVault.Core\QuantumVault.Core.csproj" />
+    <ProjectReference Include="..\QuantumVault.Infrastructure\QuantumVault.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
