--- a/QuantumVault.Core/QuantumVault.Core.csproj
+++ b/QuantumVault.Core/QuantumVault.Core.csproj
@@ -9,5 +9,9 @@
   <ItemGroup>
     <ProjectReference Include="..\QuantumVault.Infrastructure\QuantumVault.Infrastructure.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
 
 </Project>
