--- a/QuantumVault.Core/QuantumVault.Core.csproj
+++ b/QuantumVault.Core/QuantumVault.Core.csproj
@@ -7,15 +7,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\QuantumVault.Infrastructure\QuantumVault.Infrastructure.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Diagnostics.Process" />
+		<PackageReference Include="System.Diagnostics.Process" Version="4.1.0"/>
 	</ItemGroup>
 
 </Project>
