--- a/QuantumVault.Core/QuantumVault.Core.csproj
+++ b/QuantumVault.Core/QuantumVault.Core.csproj
@@ -11,7 +11,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Diagnostics.Process" Version="4.1.0"/>
+		<PackageReference Include="System.Diagnostics.Process" Version="4.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
 </Project>
