- added env variables to appsettings file - modified doc to fix api link - resolved issue of sstable creation bg service not working - added logic for flush to enable batch flushing - added logic for compacting to enable batch compacting - optimised env variables to maximize performance

--- a/QuantumVault.Api/appsettings.Development.json
+++ b/QuantumVault.Api/appsettings.Development.json
@@ -4,5 +4,41 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  // /*
+  "DATA_PATH": "./data", // Disk location for key-value storage
+  "MAX_SST_FILES": "10", // Maximum number of SST files before compaction
+  "COMPACTION_BATCH_SIZE": "4", // Number of SST files compacted in one cycle
+  "MAX_ENTRIES": "5000", // Maximum allowed key-value pairs in persistent storage
+  "FLUSH_INTERVAL": "5", // Interval (minutes) for flushing in-memory store to disk
+  "SAVE_INTERVAL": "1", // Interval (minutes) for saving from in-memory store to persistent storage
+  "MAX_STORE_SIZE": "5", // Maximum number of SST files that must exist before flushing to SST
+
+  "WRITE_LIMIT": "1000", // Max writes per second (throttling)
+  "READ_LIMIT": "2000", // Max reads per second (throttling)
+  "MAX_BATCH_SIZE": "2000", // Max key-value pairs in a batch operation
+  "MAX_QUEUE_SIZE": "5000", // Max request queue size for load management
+
+  "CPU_HIGH_THRESHOLD": "85", // CPU usage (%) before abrupt termination
+  "CPU_LOW_THRESHOLD": "60", // CPU usage (%) to reset high usage conditions
+  // */
+
+  //For testing all key features with smaller values to quickly verify functionality, we use:
+   /*
+  "MAX_SST_FILES": "3", // Ensures frequent compaction for testing
+  "COMPACTION_BATCH_SIZE": "2", // Allows quick compaction verification
+  "MAX_ENTRIES": "20", // Small in-memory limit to trigger persistence often
+  "FLUSH_INTERVAL": "1", // Flush every 1 minute for rapid disk writes
+  "SAVE_INTERVAL": "1", // Save frequently to test persistence
+  "MAX_STORE_SIZE": "2", // Forces SST flush quickly, ensuring correct file rotation
+
+  "WRITE_LIMIT": "10", // Lower limit to test throttling under small loads
+  "READ_LIMIT": "20", // Allows controlled read rate for performance checks
+  "MAX_BATCH_SIZE": "5", // Small batch size to verify batch operations
+  "MAX_QUEUE_SIZE": "10", // Small queue to observe queue management behavior
+
+  "CPU_HIGH_THRESHOLD": "30", // Simulate CPU throttling faster for testing
+  "CPU_LOW_THRESHOLD": "20" // Ensure CPU resets quickly after load reduction 
+   */
 }
