--- a/QuantumVault.Api/appsettings.json
+++ b/QuantumVault.Api/appsettings.json
@@ -6,5 +6,21 @@
     }
   },
   "AllowedHosts": "*",
-  "DATA_PATH": "/app/data"
+
+  "DATA_PATH": "./data", // Disk location for key-value storage
+  "MAX_SST_FILES": "10", // Maximum number of SST files before compaction
+  "COMPACTION_BATCH_SIZE": "4", // Number of SST files compacted in one cycle
+  "MAX_ENTRIES": "5000", // Maximum allowed key-value pairs in persistent storage
+  "FLUSH_INTERVAL": "5", // Interval (minutes) for flushing in-memory store to disk
+  "SAVE_INTERVAL": "1", // Interval (minutes) for saving from in-memory store to persistent storage
+  "MAX_STORE_SIZE": "5", // Maximum number of SST files that must exist before flushing to SST
+
+  "WRITE_LIMIT": "1000", // Max writes per second (throttling)
+  "READ_LIMIT": "2000", // Max reads per second (throttling)
+  "MAX_BATCH_SIZE": "2000", // Max key-value pairs in a batch operation
+  "MAX_QUEUE_SIZE": "5000", // Max request queue size for load management
+
+  "CPU_HIGH_THRESHOLD": "85", // CPU usage (%) before abrupt termination
+  "CPU_LOW_THRESHOLD": "60" // CPU usage (%) to reset high usage conditions
+
 }
