added rate limiting to endpoints - cleaned up test logic warnings and other minor cleanings - corrected return values in api doc

--- a/QuantumVault.Api/appsettings.Development.json
+++ b/QuantumVault.Api/appsettings.Development.json
@@ -21,7 +21,7 @@
   "MAX_QUEUE_SIZE": "5000", // Max request queue size for load management
 
   "CPU_HIGH_THRESHOLD": "85", // CPU usage (%) before abrupt termination
-  "CPU_LOW_THRESHOLD": "60", // CPU usage (%) to reset high usage conditions
+  "CPU_LOW_THRESHOLD": "60" // CPU usage (%) to reset high usage conditions
   // */
 
   //For testing all key features with smaller values to quickly verify functionality, we use:
